<resources>
    <string name="app_name">SmartDocs</string>
    <string name="login">accedi</string>
    <string name="email">Indirizzo email</string>
    <string name="password">password</string>
    <string name="forgot_password">password dimenticata?</string>
    <string name="login_error">Errore di login</string>
    <string name="reset_password">Reimposta Password</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="enter_email">Inserisci un indirizzo email</string>
    <string name="error_reset">Errore dureante il reset della password</string>
    <string name="check_email">Controlla la tua mail per proseguire</string>
    <string name="dot">.</string>

    //firebase branches
    <string name="firebase_users">Users</string>
    <string name="firebase_user_generalities">Generalities</string>
    <string name="firebase_user_projects">Projects</string>
    <string name="firebase_user_documents">Documents</string>
    <string name="firebase_user_project_name">project_name</string>
    <string name="firebase_whitelist">Whitelists</string>
    <string name="firebase_Companies">Companies</string>
    <string name="firebase_company">company</string>
    <string name="firebase_company_documents">company_documents</string>
    <string name="firebase_company_info">company_info</string>
    <string name="firebase_username">username</string>
    <string name="firebase_user_code">user_code</string>
    <string name="firebase_user_company">user_company</string>
    <string name="firebase_company_whitelist">company_whitelist</string>

    //emails
    <string name="email_object">Attivazione e Credenziali account SmartDocs</string>
    <string name="email_body">Di seguito le credenziali del Suo account SmartDocs:</string>
    <string name="email_end">Dalla pagina di Login cliccando su Reset Password può reimpostare la Password per maggiore sicurezza</string>
    <string name="email_firma">Cordiali saluti, il team di SmartDocs</string>
    <string name="registration">Registrazione</string>
    <string name="whitelist_conditions">Contatta il tuo referente aziendale per avere la tua email nella whitelist della tua azienda</string>
    <string name="generate">Genera</string>
    <string name="genarate_account">Genara Account</string>
    <string name="company_selection">Seleziona Azeinda</string>
    <string name="pool_email">pool email</string>
    <string name="new_user_pool">New User Pool</string>
    <string name="fill_fields">Completa tutti i campi richiesti!</string>
    <string name="incorrect_password">Le password Inserite non corrispondono!</string>
    <string name="password_short">La password deve contenere almeno 6 caratteri!</string>
    <string name="invalid_email">Inserisci un account email valido!</string>
    <string name="email_not_whitelisted">La tua email non risulta inserita nalla Whitelist aziendale, contatta il tuo referente per farla aggiungere alla Whitelist o contatta dreamspherestudio@gmail.com</string>
    <string name="user_registerd">Utente generato correttamente, verrai portato al Login</string>
    <string name="user_registration_fail">Errore di registrazione lato server</string>
    <string name="nuovo_utente_pool">Nuova Pool di Utenti</string>
    <string name="nuova_azienda">Nuova Azienda</string>
    <string name="new_user">Registrazione nuovo Utente</string>
    <string name="repeat_password">Ripeti Password</string>
    <string name="new_company">New Company</string>
    <string name="nome_azienda">nome azienda</string>
    <string name="enter_portal">enter portal</string>
    <string name="project_list">Lista Progetti</string>
    <string name="nome_progetto">Nome Progetto</string>
    <string name="preferences_user_company">user_company</string>
    <string name="nuovo_documento">Nuovo Documento Aziendale</string>
    <string name="document_type">Tipologia Documento</string>
    <string name="nod_doc_or_type">No document name or Docuemtn type inserted</string>
    <string name="scegli_documento">Scegli Documento</string>
    <string name="scegli_tipologia_documento">Seleziona Tipologia Documento</string>

    <string name="extra_project_name">PROJECT_NAME</string>
    <string name="extra_user_company">USER_COMPANY</string>
    <string name="extra_document_type">DOCUMENT_TYPE</string>
    <string name="confermare">Confermare</string>
    <string name="alert_dialog_1">Inserire il documento \'\'</string>
    <string name="alert_dialog_2">\'\' nel progetto \'\'</string>
    <string name="channel_name">pdf_notification_channel</string>
    <string name="channel_description">channel for pdf creation notification</string>
    <string name="firebase_companies_logos">CompaniesLogos</string>
    <string name="nome_prj_invalido">Inserire un nome progetto valido!</string>
    <string name="aggiungi_foto">Aggiungi una foto</string>
    <string name="aggiungi_firma">Aggiungi firma</string>
    <string name="app_logout">Logout App</string>
    <string name="generate_pdf">Crea PDF</string>
    <string name="salva_su_cloud">Salva su Cloud</string>
    <string name="new_document">New Document</string>


</resources>