<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AutenticationServices.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/b6"
        android:scaleType="centerCrop"
        android:src="@drawable/background_sky2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/see_database"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/simplex"
        android:text="SmartDocs"
        android:textColor="@color/y2"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/square_round_corners"
        android:fontFamily="@font/simplex"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingVertical="10dp"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textSize="@dimen/edittext_dimension"
        app:layout_constraintBottom_toTopOf="@+id/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/square_round_corners"
        android:fontFamily="@font/simplex"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingVertical="10dp"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textSize="@dimen/edittext_dimension"
        app:layout_constraintBottom_toTopOf="@+id/button_new_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_new_company"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="448dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/buttons_background_white_stroke"
        android:enabled="true"
        android:fontFamily="@font/simplex"
        android:paddingHorizontal="20dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/go_to_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/go_to_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/dot"
        android:padding="10dp"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/forgot_password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registration_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/small_text_dimens"
        android:textStyle="italic"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/light_gray"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/small_text_dimens"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/login_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateDrawable="@drawable/custom_progressbar"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/registration_new_user"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/button_new_company" />



</androidx.constraintlayout.widget.ConstraintLayout>