<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".AutenticationServices.RegisterActivity">

    <ImageView
        android:id="@+id/imageview_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/b6"
        android:scaleType="centerCrop"
        android:src="@drawable/background_gradient_orange"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textview_project_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotothin"
        android:text="@string/registration"
        android:textSize="40sp"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edittext_user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/square_round_corners"
        android:fontFamily="@font/robotothin"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"        android:textSize="@dimen/edittext_dimension"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_project_name" />

    <EditText
        android:id="@+id/edittext_user_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/square_round_corners"
        android:fontFamily="@font/robotothin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"        android:textSize="@dimen/edittext_dimension"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_user_email" />

    <EditText
        android:id="@+id/edittext_user_password_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/square_round_corners"
        android:fontFamily="@font/robotothin"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"        android:textSize="@dimen/edittext_dimension"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_user_password" />

    <TextView
        android:id="@+id/textview_nomeazienda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotothin"
        android:text="@string/company_selection"
        android:textColor="@color/black"
        android:textColorHint="@color/black"        android:textSize="30sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_user_password_confirm" />



    <Spinner
        android:id="@+id/spinner_company_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_nomeazienda" />

    <TextView
        android:id="@+id/textview_condizioni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotothin"
        android:layout_marginHorizontal="20dp"
        android:text="@string/whitelist_conditions"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_company_list" />




    <Button
        android:id="@+id/button_new_user"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/buttons_background_white_stroke"
        android:enabled="true"
        android:fontFamily="@font/robotothin"
        android:paddingHorizontal="20dp"
        android:text="@string/genarate_account"
        android:layout_marginBottom="70dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHint="@color/black"        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ProgressBar
        android:id="@+id/register_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminateDrawable="@drawable/custom_progressbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_email_studio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/robotothin"
        android:text="dreamspherestudio@gmail.com"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageview_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>