<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AutenticationServices.ResetPasswordActivity">

    <ImageView
        android:id="@+id/imageview_backgorund"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_sky2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/simplex"
        android:gravity="center"
        android:text="@string/reset_password_title"
        android:textColor="@color/y2"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageview_backgorund" />

    <!--    <EditText
            android:id="@+id/edittext_reset_password1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/square_round_corners"
            android:fontFamily="@font/simplex"
            android:hint="@string/new_password"
            android:inputType="textEmailAddress"
            android:paddingVertical="10dp"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:textColorHint="@color/white"
            android:textSize="@dimen/edittexts_textsize"
            app:layout_constraintBottom_toTopOf="@+id/edittext_reset_password2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />-->

    <EditText
        android:id="@+id/edittext_enter_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/square_round_corners"
        android:fontFamily="@font/simplex"
        android:hint="@string/email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:paddingVertical="10dp"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textSize="@dimen/edittext_dimension"
        app:layout_constraintBottom_toTopOf="@+id/button_reset_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/buttons_background_white_stroke"
        android:enabled="true"
        android:fontFamily="@font/simplex"
        android:paddingHorizontal="20dp"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




    <ProgressBar
        android:id="@+id/reset_pass__progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edittext_enter_email"
        app:layout_constraintStart_toStartOf="@+id/edittext_enter_email"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>